Fix title and content wrapping on forum show

--- a/public/assets/css/dtp.css
+++ b/public/assets/css/dtp.css
@@ -177,14 +177,24 @@ font-family: Roboto, 'Helvetica Neue', sans-serif;
 }
 
 /* Word wrap */
-.wrap-word{
+.wrap-title{
     white-space: -moz-pre-wrap !important;  /* Mozilla, since 1999 */
     white-space: -pre-wrap;      /* Opera 4-6 */
     white-space: -o-pre-wrap;    /* Opera 7 */
     white-space: pre-wrap;       /* css-3 */
     word-wrap: break-word;       /* Internet Explorer 5.5+ */
     white-space: -webkit-pre-wrap; /* Newer versions of Chrome/Safari*/
+    white-space: pre-line;
     word-break: break-all;
+}
+
+.wrap-content{
+    white-space: -moz-pre-wrap !important;  /* Mozilla, since 1999 */
+    white-space: -pre-wrap;      /* Opera 4-6 */
+    white-space: -o-pre-wrap;    /* Opera 7 */
+    white-space: pre-wrap;       /* css-3 */
+    word-wrap: break-word;       /* Internet Explorer 5.5+ */
+    white-space: -webkit-pre-wrap; /* Newer versions of Chrome/Safari*/
     white-space: pre-line;
     word-break: keep-all;
 }
